# jrnl-rs

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
src/: args.rs  cli.rs  config.rs  date_parser.rs  editor.rs  entry.rs  filter.rs  formatter.rs  journal.rs  main.rs
src/storage/: folder.rs  mod.rs  single_file.rs
